Added dependency on ExceptionsLib

--- a/package.xml
+++ b/package.xml
@@ -48,6 +48,12 @@ ${contents}
         <min>3.0.0</min>
         <max>3.999.9999</max>
       </package>
+      <package>
+        <name>ExceptionsLib</name>
+        <channel>pear.phix-project.org</channel>
+        <min>1.0.0</min>
+        <max>1.999.9999</max>
+      </package>
     </required>
   </dependencies>
   <phprelease />
