--- a/build.properties
+++ b/build.properties
@@ -3,11 +3,11 @@ project.channel=pear.phix-project.org
 project.majorVersion=2
 project.minorVersion=0
 project.patchLevel=0
-project.snapshot=true
+project.snapshot=false
 
 checkstyle.standard=Zend
 
 component.type=php-library
-component.version=10
+component.version=11
 
 pear.local=/var/www/${project.channel}
