--- a/build.properties
+++ b/build.properties
@@ -1,9 +1,9 @@
 project.name=ContractLib
 project.channel=pear.phix-project.org
 project.majorVersion=2
-project.minorVersion=0
+project.minorVersion=1
 project.patchLevel=0
-project.snapshot=false
+project.snapshot=true
 
 checkstyle.standard=Zend
 
