Upgraded skeleton file to the latest version

--- a/build.xml
+++ b/build.xml
@@ -205,7 +205,7 @@
     <delete dir="${project.review.codecoveragedir}" />
     <mkdir dir="${project.review.codecoveragedir}" />
     <mkdir dir="${project.review.logsdir}" />
-    <exec command="phpunit --configuration=phpunit.xml ${project.src.testunitdir}" checkreturn="true" logoutput="true"/>
+    <exec command="phpunit" checkreturn="true" logoutput="true"/>
     <echo/>
     <echo>The code coverage report is in file://${project.review.codecoveragedir}</echo>
     <echo/>
