Component now uses a versioned namespace to support parallel installations

--- a/build.properties
+++ b/build.properties
@@ -1,4 +1,4 @@
-project.name=ContractLib
+project.name=ContractLib2
 project.channel=pear.phix-project.org
 project.majorVersion=2
 project.minorVersion=1
