Now uses Autoloader4 and ExceptionsLib1

--- a/package.xml
+++ b/package.xml
@@ -40,13 +40,13 @@ ${contents}
         <min>1.9.4</min>
       </pearinstaller>
       <package>
-        <name>Autoloader</name>
+        <name>Autoloader4</name>
         <channel>pear.phix-project.org</channel>
-        <min>3.0.0</min>
-        <max>3.999.9999</max>
+        <min>4.0.0</min>
+        <max>4.999.9999</max>
       </package>
       <package>
-        <name>ExceptionsLib</name>
+        <name>ExceptionsLib1</name>
         <channel>pear.phix-project.org</channel>
         <min>1.0.0</min>
         <max>1.999.9999</max>
