--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "phix/ContractLib2",
+	"name": "phix/contractlib2",
 	"description": "ContractLib is a lightweight PHP library designed to help you write more robust PHP components by helping your components enforce programming contracts throughout your code",
 	"homepage": "https://github.com/stuartherbert/ContractLib/",
 	"license": "BSD-3-Clause",
