Fix: use Phix autoloader for loading unit test classes

--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,9 @@
 	"require": {
 		"phix/exceptionslib1": "1.*"
 	},
+	"require-dev": {
+		"phix/autoloader4": "4.*"
+	},
 	"autoload": {
 		"psr-0": { "" : "src/php/" }
 	}
